plugins {
    id 'java'
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
//    id 'com.google.cloud.tools.jib' version '2.6.0'
    id 'org.springframework.experimental.aot' version '0.10.5'
    id 'org.graalvm.buildtools.native' version '0.9.4'
    id 'org.hibernate.orm'
}

group = 'com.zx5435'
version = '0.1.0'
java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
    maven { url 'https://repo.spring.io/release' }
    mavenCentral()
}

//jib {
//    from {
//        image = 'openjdk:8u302-jre'
//    }
//    to {
//        image = 'zx5435/iothub-echo'
//        tags = [version.toString()]
//    }
//    container {
//        mainClass = 'com.zx5435.echo.iothub.IotHubApplication'
//        jvmFlags = ['-XX:+UnlockExperimentalVMOptions', '-XX:+UseCGroupMemoryLimitForHeap', '-XX:MaxRAMPercentage=75.0']
//        //        args = ['some', 'args']
//        ports = ['1883', '8080']
//        format = 'OCI'
//        creationTime = 'USE_CURRENT_TIMESTAMP'
//    }
//}

dependencies {
    // mqtt
//    implementation 'io.netty:netty-all:4.1.66.Final'
//    implementation 'org.springframework.boot:spring-boot-starter-webflux'
//    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'

    // dev
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // spring
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    // db
    implementation 'org.xerial:sqlite-jdbc:3.36.0.1'
    implementation "com.github.gwenn:sqlite-dialect:0.1.2"
    implementation "redis.clients:jedis:3.6.0"
    //implementation 'org.redisson:redisson:3.16.1'
    implementation "org.influxdb:influxdb-java:2.20"

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

test {
    useJUnitPlatform()
}

bootBuildImage {
    builder = 'paketobuildpacks/builder:tiny'
    environment = ['BP_NATIVE_IMAGE': 'true']
}

nativeBuild {
    classpath processAotResources.outputs, compileAotJava.outputs
}

nativeTest {
    classpath processAotTestResources.outputs, compileAotTestJava.outputs
}

hibernate {
    enhance {
        enableLazyInitialization = true
        enableDirtyTracking = true
        enableAssociationManagement = true
        enableExtendedEnhancement = false
    }
}
